--- a/public/static/css/flex.css
+++ b/public/static/css/flex.css
@@ -59,69 +59,9 @@ column-gap: 1rem;
 padding:2rem 0;
 }
 
-.top-animals img{
-    width: 100%;
-    height: 100%;
-}
-.top-animals img {
-    transition: all 1s;
-}
-
-.top-animals img:hover {
-    transform: scale(1.1);
-}
-
-.top-animals div {
-    overflow: hidden;
-    border: 1px solid #b19891;
-}
-
-
-.top-articles-grid img {
-    opacity: 0.5;
-}
-
-.top-articles-grid article {
-    position: relative;
-    top: 0;
-    right: 0;
 
     /* добавляет полосу прокрутки, если содержимое
      не вмещается в контейнер*/
     /*overflow: scroll;*/
     /* скрывает содержимое, которое не вмещается в контейнер*/
-    overflow: hidden;
-}
-.top-articles-grid div {
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding: 16px;
-}
-
-/*articles grid*/
-.top-articles-grid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 7px;
-}
-
-.top-articles-grid :nth-child(1) {
-    grid-row: 1 / 2;
-    grid-column: 1 / 3;
-}
-
-.top-articles-grid :nth-child(3){
-    grid-row: 1 / 4;
-    grid-column: 4 / 5;
-}
-
-.top-articles-grid :nth-child(5){
-    grid-row: 2 / 3;
-    grid-column: 2 / 4;
-
-    transform: rotate(7deg);
-}
-
-
-
+    /* overflow: hidden; */
