--- a/public/static/css/flex.css
+++ b/public/static/css/flex.css
@@ -58,6 +58,12 @@ grid-template-rows: repeat(2, 1fr);
 column-gap: 1rem;
 padding:2rem 0;
 }
+.grid_four{
+    display:inline-grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 200px);
+    column-gap: 1rem;
+}
 
 
     /* добавляет полосу прокрутки, если содержимое
