--- a/public/static/css/form.css
+++ b/public/static/css/form.css
@@ -18,7 +18,7 @@ a{
     left: 50%; 
     transform: translate(-50%, -50%);
     background: rgb(44, 44, 44, 0.7);
-    width:350px;
+    width:370px;
     padding: 20px;
     /* height:100vh;
     justify-content: center;
@@ -63,7 +63,7 @@ a{
        } 
 .userInput {
         width: 100%; 
-        height: 50px;
+        height: 40px;
         font-size: 20px;
         color: whitesmoke;
         outline: none;
@@ -146,7 +146,7 @@ input.button {
     border-radius: 10px;  
    } 
 
-.reg_button:hover,
+.reg_button,
 .button:hover {
     background: #fa4a23;
    }
@@ -158,7 +158,9 @@ margin-top:1rem;
 a.terms:hover{
     color:#c2492d ;
 }
-.text-error{
-    color:red;
+span{
+    font-size: 12px;
+    padding:2px 0;
+    position:relative;
 }
  
