--- a/public/static/css/form.css
+++ b/public/static/css/form.css
@@ -51,22 +51,23 @@ a{
     /*  */
 }
 .inputBox{
-    /* position:relative; */
-    margin: 0 0 15px;
+     position:relative;
+    margin:0 0 15px;
     }
 
     .userInput {
-        width: 350px; 
+        width: 100%; 
         height: 40px;
         font-size: 15px;
         color: whitesmoke;
         outline: none;
         border: none;
         border-bottom: 1px solid #a5a5a5;
-        padding:10px 0;
-        /* position: relative; */
+        padding:10px;
         background: transparent;
-       } 
+        position:relative;
+       }
+
 .labelText {
         position:absolute;
         font-size: 18px;
@@ -96,7 +97,7 @@ label.tab.active {
     background: #fff;
     color: black;
    }
-.focus .labelText{
+.labelText.focus {
     transform:translateY(-30px);
     font-size: 14px;
     color: #fa4a23;
