--- a/public/static/css/form.css
+++ b/public/static/css/form.css
@@ -51,7 +51,6 @@ a{
     /*  */
 }
 .inputBox{
-     position:relative;
     margin:0 0 15px;
     }
 
@@ -97,7 +96,7 @@ label.tab.active {
     background: #fff;
     color: black;
    }
-.labelText.focus {
+  .focus{
     transform:translateY(-30px);
     font-size: 14px;
     color: #fa4a23;
