--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -11,6 +11,7 @@ body{
     color:black;
     width: 100%;
     height:auto; 
+    line-height: 1.5;
 }
 header{
 width:100%;
@@ -92,9 +93,7 @@ align-items: center;
     margin-top:1rem;
     display: block;
 }
-.hidden{
-    overflow: hidden;
-}
+
 .service a{
     color:white;
 }
