--- a/public/static/css/preloader.css
+++ b/public/static/css/preloader.css
@@ -4,8 +4,9 @@ body{
     background-color:blanchedalmond;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
 .preloader{
-    position:absolute;
+    position:fixed;
     top:0;
     left:0;
     right:0;
